--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -49,6 +49,8 @@ executable haskell-project-exe
   build-depends:
       base >=4.7 && <5
     , haskell-project
+    , sqlite-simple
+    , time
   default-language: Haskell2010
 
 test-suite haskell-project-test
