--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -1,14 +1,14 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
 name:           haskell-project
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-project#readme>
-homepage:       https://github.com/githubuser/haskell-project#readme
-bug-reports:    https://github.com/githubuser/haskell-project/issues
+description:    Please see the README on GitHub at <https://github.com/cray-mx/haskell-project#readme>
+homepage:       https://github.com/cray-mx/haskell-project#readme
+bug-reports:    https://github.com/cray-mx/haskell-project/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2023 Author name here
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/haskell-project
+  location: https://github.com/cray-mx/haskell-project
 
 library
   exposed-modules:
@@ -35,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , http-conduit >=2.3
   default-language: Haskell2010
 
 executable haskell-project-exe
@@ -48,7 +49,9 @@ executable haskell-project-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-project
+    , http-conduit >=2.3
   default-language: Haskell2010
 
 test-suite haskell-project-test
@@ -64,4 +67,5 @@ test-suite haskell-project-test
   build-depends:
       base >=4.7 && <5
     , haskell-project
+    , http-conduit >=2.3
   default-language: Haskell2010
