--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Fetch
       Lib
   other-modules:
       Paths_haskell_project
@@ -35,6 +36,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , http-conduit >=2.3
   default-language: Haskell2010
 
@@ -66,6 +68,7 @@ test-suite haskell-project-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , haskell-project
     , http-conduit >=2.3
   default-language: Haskell2010
