--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -38,6 +38,7 @@ library
       base >=4.7 && <5
     , bytestring
     , http-conduit >=2.3
+    , zip >=2.0
   default-language: Haskell2010
 
 executable haskell-project-exe
@@ -51,9 +52,8 @@ executable haskell-project-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , bytestring
     , haskell-project
-    , http-conduit >=2.3
+    , zip >=2.0
   default-language: Haskell2010
 
 test-suite haskell-project-test
@@ -68,7 +68,6 @@ test-suite haskell-project-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , bytestring
     , haskell-project
-    , http-conduit >=2.3
+    , zip >=2.0
   default-language: Haskell2010
