Started parser Impl

--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Parse
   other-modules:
       Paths_haskell_project
   autogen-modules:
@@ -34,7 +35,9 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      MissingH
+    , base >=4.7 && <5
+    , parsec
   default-language: Haskell2010
 
 executable haskell-project-exe
@@ -47,10 +50,8 @@ executable haskell-project-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      MissingH
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , haskell-project
-    , parsec
   default-language: Haskell2010
 
 test-suite haskell-project-test
