--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Fetch
       Lib
+      Main
       Parse
   other-modules:
       Paths_haskell_project
@@ -38,9 +39,9 @@ library
   build-depends:
       MissingH
     , base >=4.7 && <5
-    , parsec
     , bytestring
     , http-conduit >=2.3
+    , parsec
   default-language: Haskell2010
 
 executable haskell-project-exe
