--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -27,7 +27,6 @@ library
   exposed-modules:
       Fetch
       Lib
-      Main
       Parse
   other-modules:
       Paths_haskell_project
@@ -42,6 +41,8 @@ library
     , bytestring
     , http-conduit >=2.3
     , parsec
+    , sqlite-simple
+    , time
   default-language: Haskell2010
 
 executable haskell-project-exe
