--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -28,6 +28,7 @@ library
       Fetch
       Lib
       Parse
+      Types
   other-modules:
       Paths_haskell_project
   autogen-modules:
@@ -40,6 +41,7 @@ library
     , base >=4.7 && <5
     , bytestring
     , http-conduit >=2.3
+    , http-types
     , parsec
     , sqlite-simple
     , time
@@ -57,8 +59,6 @@ executable haskell-project-exe
   build-depends:
       base >=4.7 && <5
     , haskell-project
-    , sqlite-simple
-    , time
   default-language: Haskell2010
 
 test-suite haskell-project-test
