--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,9 @@ ghc-options:
 
 library:
   source-dirs: src
+  dependencies:
+  - time
+  - sqlite-simple
 
 executables:
   haskell-project-exe:
@@ -46,8 +49,6 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - haskell-project
-    - time
-    - sqlite-simple
 
 tests:
   haskell-project-test:
