--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -26,7 +26,7 @@ source-repository head
 library
   exposed-modules:
       Database
-      Lib
+      Fetch
       Parse
   other-modules:
       Paths_haskell_project
