fix: clean project

--- a/package.yaml
+++ b/package.yaml
@@ -2,7 +2,7 @@ name:                haskell-project
 version:             0.1.0.0
 github:              "cray-mx/haskell-project"
 license:             BSD-3-Clause
-author:              "Author name here"
+author:              "Group-24"
 maintainer:          "example@example.com"
 copyright:           "2023 Author name here"
 
