--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -9,7 +9,7 @@ version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/cray-mx/haskell-project#readme>
 homepage:       https://github.com/cray-mx/haskell-project#readme
 bug-reports:    https://github.com/cray-mx/haskell-project/issues
-author:         Author name here
+author:         Group-24
 maintainer:     example@example.com
 copyright:      2023 Author name here
 license:        BSD-3-Clause
@@ -55,21 +55,6 @@ executable haskell-project-exe
       Paths_haskell_project
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , haskell-project
-  default-language: Haskell2010
-
-test-suite haskell-project-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_haskell_project
-  autogen-modules:
-      Paths_haskell_project
-  hs-source-dirs:
-      test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
