--- a/.github/workflows/deploy-haddock.yml
+++ b/.github/workflows/deploy-haddock.yml
@@ -28,6 +28,7 @@ jobs:
           enable-stack: true
           stack-version: 'latest'
       - run: 'stack haddock --haddock-arguments --quickjump'
+      - run: 'ls -la'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
