--- a/.github/workflows/deploy-haddock.yml
+++ b/.github/workflows/deploy-haddock.yml
@@ -28,7 +28,14 @@ jobs:
           enable-stack: true
           stack-version: 'latest'
       - run: 'stack haddock --haddock-arguments --quickjump'
-      - run: 'ls -la'
+      - run: 'ls -Rla'
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+        ## limits ssh access and adds the ssh public key for the user which triggered the workflow
+          limit-access-to-actor: true
+        ## limits ssh access and adds the ssh public keys of the listed GitHub users
+          limit-access-to-users: kotuw
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
