--- a/.github/workflows/new-cabal-haddock.yml
+++ b/.github/workflows/new-cabal-haddock.yml
@@ -1,4 +1,4 @@
-name: deploy Haddock to github pages
+name: deploy Haddock to github pages using cabal
 on:
   # Run manually
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     
-steps:
+    steps:
       - uses: actions/checkout@v4
 
       - name: Set up GHC 
